features completas, completando detalle items

--- a/template.html
+++ b/template.html
@@ -5,6 +5,11 @@
         <meta charset="UTF-8">
         <title>Hello Rigo with Vanilla.js</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://fonts.cdnfonts.com/css/star-wars" rel="stylesheet">
+        <link href="https://db.onlinewebfonts.com/c/81c94f7de46932058605da3de7a35798?family=DIN+Next+Rounded+LT+W04+Regular" rel="stylesheet">
+        <link href="https://db.onlinewebfonts.com/c/3d54c69203e113cfdaa3948a188f48dc?family=DIN+Next+Rounded+LT+W04+Light" rel="stylesheet">
+        <link href="https://db.onlinewebfonts.com/c/092c449c2b2bc64e9c6bbe8a7b9b291f?family=DIN+Next+Rounded+LT+W04+Medium" rel="stylesheet">
+        
     </head>
     <body>
         <div id="app""></div>
